# prezo

./: .gitignore  CHANGES.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  ruff.toml
.builds/: alpine.yml
docs/: slides.md  tutorial.md
examples/: columns_demo.md  demo.md  hop3-presentation.md  layout_demo.md
notes/: roadmap-0.1.md  roadmap-0.2.md  roadmap-0.3.md  roadmap-future.md
src/prezo/: __init__.py  app.py  config.py  export.py  layout.py  parser.py  terminal.py
src/prezo/export/: __init__.py  common.py  html.py  images.py  pdf.py  svg.py
src/prezo/images/: ascii.py  kitty.py  overlay.py  sixel.py
src/prezo/screens/: __init__.py  goto.py  help.py  overview.py  search.py  toc.py
src/prezo/widgets/: __init__.py  image_display.py  slide_content.py  status_bar.py
tests/: conftest.py  test_app.py  test_ascii_renderer.py  test_base_renderer.py  test_chafa_renderer.py  test_config.py  test_export.py  test_images.py  test_widgets.py
tests/a_unit/: test_config.py  test_incremental.py  test_layout.py  test_parser.py  test_terminal.py  test_themes.py
tests/b_integration/: test_config.py  test_export.py  test_screens.py  test_status_bar.py
tests/c_e2e/: test_app.py  test_cli.py
