[project]
name = "prezo"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stefane Fermigier", email = "sf@fermigier.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.89.1",
    "python-frontmatter>=1.1.0",
    "textual-image>=0.8.0",
]

[project.scripts]
prezo = "prezo:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "cairosvg>=2.7.0",
    "pypdf>=4.0.0",
    "abilian-devtools>=0.8.0",
    "pytest-asyncio>=1.3.0",
]
export = [
    "cairosvg>=2.7.0",
    "pypdf>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
